--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <header>
         <h1>La web de Juan Andres</h1>
+        <h2>Bienvenido a este nuevo sitio</h2>
+        <hr>
         </header>
-    
 </body>
 </html>
