--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <main>
             <section>
                 <h2>Biografia</h2>
+                <p>Naci en Lima</p>
             </section>
         </main>
 </body>
