agregado cambio en section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <section>
                 <h2>Biografia</h2>
                 <p>Naci en Lima</p>
+                <p>Vivi en VES por un tiempo</p>
             </section>
         </main>
 </body>
